# femx

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODEX_REFACTOR_PLAN.md  LICENSE  README.md  Redesign.md  preview-docs.sh  pyproject.toml
apps/inverse/: CMakeLists.txt  Common.cpp  Common.hpp  PetscCommon.hpp  PetscError.hpp
apps/navier/: CMakeLists.txt  Components.cpp  Components.hpp  ForwardSolveMonitor.cpp  ForwardSolveMonitor.hpp  NavierConfig.hpp  NavierHelper.cpp  NavierHelper.hpp  NavierKernel.cpp  NavierKernel.hpp
apps/navier-gls/: Assembly.cpp  Assembly.hpp  BoundaryConditions.cpp  BoundaryConditions.hpp  CMakeLists.txt  Components.cpp  Components.hpp  Config.cpp  Config.hpp  ConfigCavity2D.json  NavierGLS.cpp  NavierGLS.hpp  README.md  Utils.hpp  main.cpp
apps/navier_gls/: CMakeLists.txt  Config.json  Navier.cpp  Navier.hpp  NavierComponents.cpp  NavierComponents.hpp  NavierGLS.cpp  Utils.hpp  main.cpp
apps/ns-forward/: CMakeLists.txt  README.md  main-petsc.cpp  main-resolve.cpp
examples/poisson/: CMakeLists.txt  PoissonComponents.hpp  PoissonCuda.cu  PoissonCuda.hpp  PoissonForward.cpp  PoissonForward.hpp  PoissonOperator.hpp  README.md  main-petsc.cpp  main-resolve.cpp  main.cpp
examples/poisson-opt/: CMakeLists.txt  PoissonOpt.cpp  PoissonOpt.hpp  README.md  main-petsc.cpp  main-resolve.cpp
femx/: CMakeLists.txt
femx/ad/: CMakeLists.txt  Enzyme.hpp  Forward.hpp
femx/algebra/: CMakeLists.txt  CsrPattern.cpp  CsrPattern.hpp  DenseLinearSolver.cpp  DenseLinearSolver.hpp  DenseMatrix.cpp  DenseMatrix.hpp  IndexSetList.hpp  LinearOperator.hpp  LinearSolver.hpp  MatrixBuilder.hpp  MatrixOperator.hpp  MatrixView.hpp  SparseMatrix.cpp  SparseMatrix.hpp  SystemMatrix.hpp  SystemVector.hpp  Vector.hpp  VectorView.hpp
femx/assembly/: Assembler.cpp  Assembler.hpp  Assembly.cpp  Assembly.hpp  AssemblyMap.cpp  AssemblyMap.hpp  BoundaryDofLayout.cpp  BoundaryDofLayout.hpp  BoundaryElementKernel.hpp  BoundaryMap.cpp  BoundaryMap.cu  BoundaryMap.hpp  BoundaryPlan.cpp  BoundaryPlan.cu  BoundaryPlan.hpp  BoundaryResidualEquation.cpp  BoundaryResidualEquation.hpp  CMakeLists.txt  ConstrainedTimeResidual.cpp  ConstrainedTimeResidual.hpp  CsrBuilder.cpp  CsrBuilder.hpp  CudaAssembly.hpp  DirichletControlResidual.cpp  DirichletControlResidual.hpp  DofLayout.cpp  DofLayout.hpp  ElementKernel.hpp  ElementResidualEquation.cpp  ElementResidualEquation.hpp  EnzymeBoundaryElementKernel.hpp  EnzymeBoundaryIntegralKernel.hpp  EnzymeBoundaryKernel.hpp  EnzymeElementKernel.hpp  EnzymeTimeVolumeKernel.hpp  EnzymeVolumeKernel.hpp  FEMResidual.cpp  FEMResidual.hpp  HostTimeResidual.cpp  HostTimeResidual.hpp  (+10 more)
femx/bc/: CMakeLists.txt  DirichletCondition.cpp  DirichletCondition.hpp  DirichletControl.cpp  VelocityProfile.cpp  VelocityProfile.hpp
femx/common/: CMakeLists.txt  Checks.hpp  Context.hpp  Cuda.cpp  Cuda.cu  Cuda.hpp  Device.cpp  Device.cu  LinearInterpolation.hpp  Math.cpp  Math.hpp  Types.hpp  Workspace.hpp
femx/core/: CMakeLists.txt  Math.cpp  Math.hpp
femx/eq/: AssembledLinearStateSolver.hpp  AssembledNewtonStateSolver.hpp  AssembledResidualEquation.hpp  CMakeLists.txt  MatrixFreeNewtonStateSolver.hpp  MatrixLinearStateSolver.cpp  MatrixLinearStateSolver.hpp  MatrixNewtonStateSolver.cpp  MatrixNewtonStateSolver.hpp  MatrixResidualEquation.cpp  MatrixResidualEquation.hpp  NewtonStateSolver.hpp  OperatorNewtonStateSolver.cpp  OperatorNewtonStateSolver.hpp  ResidualEquation.hpp  StateJacobianOperator.cpp  StateJacobianOperator.hpp  StateSolver.hpp  TimeDirichletControlEquation.cpp  TimeDirichletControlEquation.hpp  TimeMatrixLinearStateSolver.cpp  TimeMatrixLinearStateSolver.hpp  TimeMatrixNewtonStateSolver.cpp  TimeMatrixNewtonStateSolver.hpp  TimeMatrixResidualEquation.cpp  TimeMatrixResidualEquation.hpp  TimeNewtonStateSolver.cpp  TimeNewtonStateSolver.hpp  TimeResidualEquation.hpp  TimeStateJacobianOperator.cpp  TimeStateJacobianOperator.hpp  TimeStateSolver.hpp  TimeStateTrajectory.cpp  TimeStateTrajectory.hpp
femx/fem/: BoundaryCondition.cpp  BoundaryCondition.hpp  BoundaryElementValues.cpp  BoundaryElementValues.hpp  BoundarySurface.cpp  BoundarySurface.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  ControlMap.cpp  ControlMap.cu  ControlMap.hpp  DirichletBC.cpp  DirichletBC.hpp  DirichletControl.cpp  DirichletControl.hpp  DofLayout.cpp  DofLayout.hpp  DofMap.cpp  DofMap.hpp  Element.cpp  Element.hpp  ElementQuadratureData.cpp  ElementQuadratureData.hpp  ElementValues.cpp  ElementValues.hpp  FESpace.cpp  FESpace.hpp  FiniteElement.hpp  GaussQuadrature.hpp  Geometry.cpp  Geometry.hpp  GmshReader.cpp  GmshReader.hpp  Mesh.cpp  Mesh.hpp  MixedFESpace.cpp  MixedFESpace.hpp  ObservationGrid.cpp  ObservationGrid.hpp  (+11 more)
femx/inverse/: AdjointReducedFunctional.cpp  AdjointReducedFunctional.hpp  AdjointSolver.hpp  CMakeLists.txt  DerivativeCheck.cpp  DerivativeCheck.hpp  DeviceTimeObjective.cpp  DeviceTimeObjective.cu  DeviceTimeObjective.hpp  EquationAdjointSolver.hpp  LeastSquaresObjective.cpp  LeastSquaresObjective.hpp  MatrixAdjointSolver.cpp  MatrixAdjointSolver.hpp  MatrixEquationAdjointSolver.hpp  Objective.hpp  ObjectiveFunctional.hpp  ObservationGrid.cpp  ObservationGrid.hpp  ObservationOperator.hpp  OperatorAdjointSolver.cpp  OperatorAdjointSolver.hpp  QuadraticParameterRegularization.cpp  QuadraticParameterRegularization.hpp  ReducedFunctional.cpp  ReducedFunctional.hpp  SumObjective.cpp  SumObjective.hpp  SumObjectiveFunctional.cpp  SumObjectiveFunctional.hpp  SumTimeObjective.cpp  SumTimeObjective.hpp  SumTimeObjectiveFunctional.cpp  SumTimeObjectiveFunctional.hpp  TimeAdjointReducedFunctional.cpp  TimeAdjointReducedFunctional.hpp  TimeBlockRegularization.cpp  TimeBlockRegularization.hpp  TimeLeastSquaresObjective.cpp  TimeLeastSquaresObjective.hpp  (+14 more)
femx/io/: CMakeLists.txt  DataOut.cpp  DataOut.hpp  Hdf5Writer.cpp  Hdf5Writer.hpp  TimeSeriesDataIn.cpp  TimeSeriesDataIn.hpp  TimeSeriesDataOut.cpp  (+7 more)
refem/: CMakeLists.txt
tests/: CMakeLists.txt  TestBase.hpp  TestHelper.hpp
(+918 files in other folders)
