[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "femx"
version = "0.4.0"
description = "Python interface for the femx finite-element engine."
readme = "python/README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.23", "scipy>=1.9"]

[project.optional-dependencies]
test = ["h5py>=3.8"]

[tool.scikit-build]
build-dir = "build/python-wheel"
cmake.build-type = "Release"
wheel.packages = []
install.components = ["python"]

[tool.scikit-build.cmake.define]
FEMX_BUILD_APPS = "OFF"
FEMX_BUILD_EXAMPLES = "OFF"
FEMX_BUILD_TESTS = "OFF"
FEMX_ENABLE_HDF5 = "ON"
FEMX_ENABLE_OPENMP = "OFF"
FEMX_ENABLE_RESOLVE = "OFF"
FEMX_ENABLE_PETSC = "ON"
FEMX_BUILD_PYTHON = "ON"
FEMX_BUILD_PYTHON_EXPERIMENTAL = "OFF"
